// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-align23456"
  >
    <div
      id="align23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="align-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="align-self: flex-start; background: rgb(64, 160, 255);"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1enej14 css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            id="One23456"
            type="button"
          >
            <span>
              One23456
            </span>
          </button>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="align-self: center; background: rgb(255, 79, 175);"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1enej14 css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            id="Two23456"
            type="button"
          >
            <span>
              Two23456
            </span>
          </button>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
          style="align-self: flex-end; background: rgb(64, 170, 85);"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1enej14 css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
            id="Three23456"
            type="button"
          >
            <span>
              Three23456
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`center content 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-center content23456"
  >
    <div
      id="center content23456"
    >
      <div
        class="ant-row ant-row-center css-dev-only-do-not-override-1enej14 css-var-root"
        id="center content-content23456"
      >
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="flex: 0 1 800px; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`grow 0 0 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-grow 0 023456"
  >
    <div
      id="grow 0 023456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="grow 0 0-content23456"
      >
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="flex: 0 1 auto; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            grow: 0 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="flex: 0 1 auto; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            grow: 0 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`grow 0 1 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-grow 0 123456"
  >
    <div
      id="grow 0 123456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="grow 0 1-content23456"
      >
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="flex: 0 1 auto; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            grow: 0 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="flex: 1 1 auto; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            grow: 1 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`grow 1 0 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-grow 1 023456"
  >
    <div
      id="grow 1 023456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="grow 1 0-content23456"
      >
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="flex: 1 1 auto; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            grow: 1 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="flex: 0 1 auto; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            grow: 0 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`grow 1 1 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-grow 1 123456"
  >
    <div
      id="grow 1 123456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="grow 1 1-content23456"
      >
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="flex: 1 1 auto; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            grow: 1 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="flex: 1 1 auto; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            grow: 1 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`offset 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-offset23456"
  >
    <div
      id="offset23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="offset-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-20 ant-col-md-offset-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 ant-col-md-offset-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`offset push pull span 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-offset push pull span23456"
  >
    <div
      id="offset push pull span23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="offset push pull span-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-6 ant-col-md-offset-2 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 170, 85);"
        >
          <div
            id="One23456"
          >
            ONE Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-6 ant-col-md-push-1 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            ONE Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-6 ant-col-md-pull-1 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175); opacity: 0.5;"
        >
          <div
            id="Two23456"
          >
            TWO Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`order 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-order23456"
  >
    <div
      id="order23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="order-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 ant-col-md-order-1 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            ONE Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 ant-col-md-order-0 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            TWO Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pull 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-pull23456"
  >
    <div
      id="pull23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="pull-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            ONE Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 ant-col-md-pull-1 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175); opacity: 0.5;"
        >
          <div
            id="Two23456"
          >
            TWO Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`push 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-push23456"
  >
    <div
      id="push23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="push-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 ant-col-md-push-1 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            ONE Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-10 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175); opacity: 0.5;"
        >
          <div
            id="Two23456"
          >
            TWO Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shrink 1 1 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-shrink 1 123456"
  >
    <div
      id="shrink 1 123456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="shrink 1 1-content23456"
      >
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="flex: 0 1 auto; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            shrink: 1 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="flex: 0 1 auto; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            shrink: 1 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`size 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-size23456"
  >
    <div
      id="size23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="size-content23456"
      >
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="flex: 0 1 200px; background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            size: 200 - ONE Lorem ipsum dolor

          </div>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="flex: 0 1 400px; background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            size: 400 - TWO Lorem ipsum dolor

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`span 1`] = `
<div>
  <div
    class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-24 css-dev-only-do-not-override-1enej14 css-var-root"
    id="bl-span23456"
  >
    <div
      id="span23456"
    >
      <div
        class="ant-row css-dev-only-do-not-override-1enej14 css-var-root"
        id="span-content23456"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-4 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-One23456"
          style="background: rgb(64, 160, 255);"
        >
          <div
            id="One23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-8 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Two23456"
          style="background: rgb(255, 79, 175);"
        >
          <div
            id="Two23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-15 css-dev-only-do-not-override-1enej14 css-var-root"
          id="bl-Three23456"
        >
          <div
            id="Three23456"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo

          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
